2004-06-12 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.[ch]: added new function to get the 
	PlannerWindow for a PlannerTaskTree. This is need because we
	are moving task undo commands to a central point so we have removed
	from src/planner-task-tree.c the undo command that were used in
	planner-gantt-row.

	(planner_task_tree_get_window)

	I need to check with richard the change and maybe, find a better way to 
	do it. The CVS doesn't work so we need a quick fix ;-)

2004-06-12 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.c: moved undo code to planner-task-dialog
	in last commit but failed to commit this file.

2004-06-10 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.[ch]: implemented undo for predecessor
	task dialog editor (add/remove predecessor, edit a predecessor)
	
2004-06-08  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-object.c: (mrp_object_get_project):
	* libplanner/mrp-object.h:
	* libplanner/mrp-project.h: Small hack to avoid a lot of
	g_object_get.
	
	* src/planner-gantt-model.c: (gantt_model_get_value): Use
	work_start instead of start for display and use the getters
	instead of g_object_get in the get_value function.

2004-06-07 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo for resource
	assignment to task (assign resource, remove resource, change
	units assigned). 

	Use planned_cmd_new API in all the undo code.

	Changes in undo functions in order to be more understable.
	
2004-06-06 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo milestone and 
	fixed duration in task dialog.
	
2004-06-04 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo for all the fields
	in the first page of the task dialog editor notebook, except 
	milestone and fixed duration.

	* src/planner-resource-view.c: fixed memory leaks using GValues.
